# resources/views/emergency_response_themes/show_fields.blade.php
@@ -1,0 +1,12 @@
+<!-- Name Field -->
+<div class="form-group">
+    {!! Form::label('name', 'Name:') !!}
+    <p>{{ $emergencyResponseTheme->name }}</p>
+</div>
+
+<!-- Description Field -->
+<div class="form-group">
+    {!! Form::label('description', 'Description:') !!}
+    <p>{{ $emergencyResponseTheme->description }}</p>
+</div>
+
